# Database-Template

./: .gitignore  Entry.py  README.md  requirements.txt  setup.cfg  setup.py
.github/workflows/: clone.yml
Depend/: Account.py  BaseLogic.py  NormFunction.py  SqlServer.py
Git_State/: CLONE.md
Model/: TForexQuotes.py
Sample/: xauusd_2024-12-26.json
developer/definition/: state.py
developer/model/: TForexQuotes.py  TLineGenAI.py
developer/modules/: crawler.py  interface.py  logger.py
developer/modules/model/: TForexQuotes.py  TLineGenAI.py  WorkStatus.py  __init__.py
developer/modules/models/: TForexQuotes.py  TLineGenAI.py  WorkStatus.py
developer/modules/ms_sql/: sql_account.py  sql_server.py
developer/package/: interface.py  norm_function.py  sql_account.py  sql_server.py
developer/utils/: normal.py  telegram.py
developers/definition/: state.py
developers/model/: TForexQuotes.py
developers/package/: interface.py  norm_function.py  sql_server.py
git_state/: CLONE.md  clone.py
model/: TForexQuotes.py
package/: interface.py  norm_function.py  sql_server.py
tests/: Entry.py
