[metadata]
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Junwu0615/Database-Template
license = MIT
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Development Status :: 1 - Planning
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering

[options]
packages = find:
python_requires = >=3.8